--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Chatbot Beta Test</title>
-  <link rel="stylesheet" href="style_practice_page.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 
@@ -30,8 +30,11 @@
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" required><br><br>
     
-        <label for="message">Feedback:</label><br>
-        <textarea id="message" name="message" rows="5" cols="40" required>    </textarea><br><br>
+        <label for="question">Question being asked:</label><br>
+        <textarea id="message" name="question" rows="5" cols="40" required>    </textarea><br><br>
+
+        <label for="answer">Desired Answer/ Or problem being experienced:</label><br>
+        <textarea id="message" name="answer" rows="5" cols="40" required>    </textarea><br><br>
     
         <button type="submit">Submit Feedback</button>
         <p id="statusMessage"></p>
